k8s-rpi-build-podbackup/podbackup-build-tekton-triggers.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: podbackup-el-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    avp.kubernetes.io/path: "k8secrets/externalroutes"
spec:
  entryPoints:
    - websecure-external
  routes:
  - match: Host(`<externalhostname>`) && PathPrefix(`<podbackup-wh-pathprefix>`)
    kind: Rule
    services:
    - name: el-podbackup-el
      port: 8080
  tls:
    certResolver: godaddy
